# personal-agent

./: .env.example  .gitignore  README.md  exp.py  main.py  pyproject.toml  server.py  test.py
.agents/: Researcher.yaml  obsidian.yaml
docs/: CLEANUP_SUMMARY.md  CLEAN_ARCHITECTURE.md  Complete_Auth_API.postman_collection.json  IMPLEMENTATION_GUIDE.md  agent.md  configuration.md  heartbeat-scheduling.md
infrastructure/docker/: docker-compose.yml  init-databases.sh  prometheus.yml
infrastructure/kong/: README.md  kong-dev.yml  kong-prod.yml  kong.conf  kong.yml  manage-kong.sh
skills/: exercise.md  personal_assistant.md  personality.md  test.md
src/agent/: capabilities.py  events.py  exec_role.py  executor.py  handler.py  loop.py  prompt.py  tools.py  trace.py  usage.py
src/api/: server.py  session.py  ws_handler.py  ws_registry.py
src/cli_handler/: dispatch.py  result.py  router.py
src/coordinator/: __init__.py  service.py
src/heartbeat/: __init__.py  conversation_log.py  inputs.py  llm_client.py  llm_execute.py  llm_plan.py  run.py  (+4 more)
tests/: Untitled  test_agent_flow_client.py  test_agent_schema.py  test_audio.m4a  test_capabilities.py  test_core_architecture.py  test_crontab_dispatch.py  test_exec_role.py  test_heartbeat_plan_parse.py  test_prompt_builder.py  test_queue_api.py  test_queue_store.py  test_queue_ws_notify.py  test_result_rendering.py  test_runner_unit.py  test_spawn_result_format.py  test_spawn_roles.py  test_stt.py  test_trace_graph.py  test_vault_note.py  test_vault_version.py  test_ws.py  test_ws_handler_unit.py  Đường Tam Trinh 12.m4a
(+31 files in other folders)
